# viage

./: .gitmodules  CMakeLists.txt  Calcul de l'usufruit strictement personnel.docx  Calcul de l'usufruit_25.09.2024_German.docx  README.md  conanfile.txt
.github/workflows/: android.yml  linux.yml  macos.yaml  osx.yaml  windows.yml
android/: AndroidManifest.xml
ci/: deploy-qt-mac.cmake  deploy-qt-windows.cmake  deploy-qt-windows.cmake.in  installScript.qs
client/: CMakeLists.txt  Texte allemand - Plateforme digitale - Incomplet.docx  Texte allemand - Plateforme digitale.docx  client.cpp  client.hpp  client_utils.cpp  client_utils.hpp  main.cpp
client/CData/: c_base_data.hpp
client/CData/CItem/: c_account.hpp  c_address.cpp  c_company.cpp  c_contact.hpp  c_document.cpp  c_infant.hpp  c_owner.cpp  c_owner.hpp  c_person.cpp  c_person.hpp  c_senior_citizen.cpp  c_senior_citizen.hpp
client/CData/CList/: c_base_list.cpp  c_base_list.hpp  c_list.cpp  c_list.hpp  c_simple_list.cpp
client/Data/: base_data.cpp  base_data.hpp  c_base_data.cpp  c_base_data.hpp  c_list.cpp  c_list.hpp  list.cpp  list.hpp
client/Data/Item/: account.cpp  account.hpp  address.cpp  address.hpp  base_item.hpp  c_account.cpp  c_account.hpp  c_address.cpp  c_address.hpp  c_base_item.cpp  c_base_item.hpp  c_company.cpp  c_company.hpp  c_contact.cpp  c_contact.hpp  c_document.cpp  c_document.hpp  c_exterior.cpp  c_exterior.hpp  c_habitat.cpp  c_habitat.hpp  c_infant.cpp  c_infant.hpp  c_owner.cpp  c_owner.hpp  c_person.cpp  c_person.hpp  c_rent.cpp  c_rent.hpp  c_senior_citizen.cpp  c_senior_citizen.hpp  c_team.cpp  c_team.hpp  c_user.cpp  c_user.hpp  company.cpp  company.hpp  contact.cpp  contact.hpp  document.cpp  (+18 more)
client/Data/List/: c_base_list.cpp  c_base_list.hpp  c_list.cpp  c_list.hpp  c_simple_list.cpp  c_simple_list.hpp
client/Interface/: bridge.cpp  bridge.hpp  client.cpp  client.hpp  client_utils.cpp  netManager.cpp  netManager.hpp  utils.cpp  utils.hpp
client/Model/: account_filter_model.cpp  account_filter_model.hpp  document_filter_model.cpp  document_filter_model.hpp  list_model.cpp  list_model.hpp  user_filter_model.cpp  user_filter_model.hpp
client/Wrapper/: base_wrapper.cpp  base_wrapper.hpp  life_expectency.cpp  life_expectency.hpp  wrapped_calculator.cpp  wrapped_calculator.hpp  wrapped_list.cpp  wrapped_list.hpp  wrapped_nested_item.cpp  wrapped_nested_item.hpp  wrapped_nested_list.cpp  wrapped_nested_list.hpp
client/resources/: berechnung.docx  calcul.docx  viage.qrc
client/resources/qm_files/: viage_de.qm  viage_fr.qm
client/resources/ts_files/: viage_de.ts  viage_fr.ts
client/resources/ui/: AccountDelegate.qml  AddressChooser.qml  BottomBar.qml  CalculatorPage.qml  ContactDelegate.qml  ContactPage.qml  DateChooser.qml  DocumentPage.qml  ExteriorPage.qml  FlickableItem.qml  HabitatPage.qml  IntChooser.qml  LabeledTextField.qml  LoggInDialog.qml  OwnersPage.qml  PersonDelegate.qml  PhoneChooser.qml  SettingsDrawer.qml  TopBar.qml  UserDelegate.qml  UserPage.qml  main.qml
client/resources/ui/empty/: UrlProvider.qml
lib/: CMakeLists.txt
lib/Data/: base_data.cpp  base_data.hpp  item_list.cpp  item_list.hpp
lib/Data/Item/: account_item.cpp  account_item.hpp  address_item.cpp  address_item.hpp  company_item.cpp  company_item.hpp  contact_item.cpp  contact_item.hpp  document_item.cpp  document_item.hpp  exterior_item.cpp  exterior_item.hpp  habitat_item.cpp  habitat_item.hpp  infant_item.cpp  infant_item.hpp  owner_item.cpp  owner_item.hpp  person_item.cpp  rent_item.cpp  rent_item.hpp  senior_citizen_item.cpp  senior_citizen_item.hpp  team_item.cpp  team_item.hpp  user_item.cpp  user_item.hpp
lib/Data/List/: base_list.hpp  item_list.cpp  item_list.hpp  simple_item_list.cpp  simple_item_list.hpp
lib/include/: base_data.cpp  base_data.hpp  item_list.cpp  item_list.hpp
lib/include/Item/: account_item.hpp  address_item.hpp  company_item.hpp  contact_item.hpp  document_item.hpp  exterior_item.hpp  habitat_item.hpp  infant_item.cpp  infant_item.hpp  owner_item.hpp  person_item.cpp  person_item.hpp  rent_item.hpp  senior_citizen_item.hpp  team_item.hpp  user_item.hpp
lib/src/: base_data.cpp
lib/src/Item/: account_item.cpp  address_item.cpp  company_item.cpp  contact_item.cpp  document_item.cpp  exterior_item.cpp  habitat_item.cpp  infant_item.cpp  owner_item.cpp  person_item.cpp  rent_item.cpp  senior_citizen_item.cpp  team_item.cpp  user_item.cpp
resources/: calcul.docx  ofs.csv  viage.qrc
resources/icons/: ViageLogo.icns
resources/ts_files/: viage_de.ts
resources/ui/: BottomBar.qml  CameraScene.qml  DateChooser.qml  DocumentListView.qml  HabitatPage.qml  LoggInDialog.qml  MaterialButton.qml  PersonDelegate.qml  PhoneChooser.qml  PwdField.qml  (+5 more)
server/: CMakeLists.txt  README.md  list_ctl.hpp  main.cpp  reshape-viage-db.sql  server.cpp  server.hpp  server_utils.cpp  server_utils.hpp
server/Data/: s_base_data.hpp  s_list.cpp  s_list.hpp
server/Data/Item/: s_account.cpp  s_account.hpp  s_address.cpp  s_address.hpp  s_company.cpp  s_company.hpp  s_contact.cpp  s_contact.hpp  s_document.cpp  s_document.hpp  s_exterior.cpp  s_exterior.hpp  s_habitat.cpp  s_habitat.hpp  s_infant.cpp  s_infant.hpp  s_owner.cpp  s_owner.hpp  s_person.cpp  s_person.hpp  s_team.cpp  s_team.hpp  s_user.cpp  s_user.hpp
server/controllers/: account_ctl.cpp  account_ctl.hpp  base_controller.hpp  company_ctl.cpp  company_ctl.hpp  contact_ctl.cpp  contact_ctl.hpp  controllers.cpp  controllers.hpp  credential_ctl.cpp  credential_ctl.hpp  document_ctl.cpp  document_ctl.hpp  full_controller.hpp  list_ctl.hpp  nested_item_ctl.hpp  nested_list_ctl.hpp  team_ctl.cpp  team_ctl.hpp  user_ctl.cpp  user_ctl.hpp
server/filters/: login_flt.cpp  login_flt.hpp
server/models/: Account.cc  Account.h  Basedefinition.cc  Basedefinition.h  Company.cc  Company.h  Contact.cc  Contact.h  Document.cc  Document.h  Owner.cc  Owner.h  Summarylink.cc  Summarylink.h  Team.cc  Team.h  User.cc  User.h  metadata.hpp
server/test/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
(+212 files in other folders)
